[gd_scene load_steps=9 format=2]

[ext_resource path="res://Bullet_k2d.gd" type="Script" id=1]
[ext_resource path="res://sprites/bullet.png" type="Texture" id=2]
[ext_resource path="res://sprites/bomb/bomb_explodes1.png" type="Texture" id=3]
[ext_resource path="res://sprites/bomb/bomb_explodes2.png" type="Texture" id=4]
[ext_resource path="res://sprites/bomb/bomb_explodes3.png" type="Texture" id=5]
[ext_resource path="res://sprites/bomb/bomb_explodes4.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.491513, 0.512283 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 1088
collision_mask = 504
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Explode_animation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -6.81003, -7.40832 )
frames = SubResource( 2 )
frame = 3
centered = false
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="Explode_animation" to="." method="_on_Explode_animation_animation_finished"]
